enable deployment on AWS using ECS and Fargate, amend client to also become a flask app

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,8 +2,8 @@ FROM python:3.8-slim-buster
 
 WORKDIR /app
 
-RUN pip install requests
+RUN pip install requests flask
 
 COPY . .
 
-CMD [ "bash", "run-client.sh" ]
+CMD [ "bash", "run-flaskapp.sh" ]
